...

    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/recipe_add_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingEnd="6dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:id="@+id/recipe_add_image_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_add_text_layout_category"
        app:layout_constraintEnd_toStartOf="@+id/recipe_add_text_layout_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_add_top_bar"
        tools:layout_conversion_absoluteHeight="175dp"
        tools:layout_conversion_absoluteWidth="178dp">

...
        app:layout_constraintStart_toEndOf="@+id/recipe_add_image_layout"
        app:layout_constraintTop_toBottomOf="@+id/recipe_add_top_bar"
        tools:layout_conversion_absoluteHeight="82dp"
        tools:layout_conversion_absoluteWidth="178dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:maxLines="1"
            tools:ignore="HardcodedText"
            tools:layout_conversion_absoluteHeight="56dp"
...
        app:layout_constraintStart_toStartOf="@+id/recipe_add_text_layout_title"
        app:layout_constraintTop_toBottomOf="@+id/recipe_add_text_layout_title"
        tools:layout_conversion_absoluteHeight="61dp"
        tools:layout_conversion_absoluteWidth="178dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category"
            android:maxLines="1"
            tools:ignore="HardcodedText"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="178dp"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="191dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_add_text_layout_prep_time"
        style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
...
        app:startIconDrawable="@drawable/ic_twotone_timer_24"
        app:suffixText="minutes"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="379dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_prep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Preparation Time"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="HardcodedText"
...
            tools:layout_conversion_absoluteWidth="379dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="285dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_add_text_layout_num_servings"
        style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
...
        app:startIconDrawable="@drawable/ic_numbers_24"
        app:suffixText="servings"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="379dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_num_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Number of Servings"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="HardcodedText"
...
            tools:layout_conversion_absoluteWidth="379dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="412dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_add_text_layout_comments"
        style="@style/Theme.FoodBit.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_add_text_layout_num_servings"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_conversion_absoluteWidth="379dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="Comment..."
            android:inputType="text"
            android:maxLines="1"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_add_text_layout_comments"
        tools:layout_conversion_absoluteHeight="891dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/recipe_add_ingredients_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:minHeight="@android:dimen/app_icon_size"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/recipe_add_ingredient"
            app:title="Ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_add_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
