...
            app:contentScrim="@color/white"
            app:expandedTitleTextAppearance="@style/Theme.FoodBit.ExpandedTitleTextAppearance"
            app:expandedTitleTextColor="@color/primaryDarkColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="Title2"
            app:toolbarId="@+id/recipe_detail_toolbar">

            <ImageView
                android:id="@+id/recipe_detail_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="an image"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.RecipeDetailFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_detail_ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_ingredients_field" />

            <TextView
                android:id="@+id/recipe_detail_prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawablePadding="6sp"
                android:gravity="center_vertical"
                android:text="480 minutes"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/recipe_detail_num_servings"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/ic_twotone_timer_24"
                app:drawableTint="@color/primaryColor"
                tools:ignore="HardcodedText" />
...
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="Ingredients"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_comments_content"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/recipe_detail_comments_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_comments_field"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/recipe_detail_category_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Lunch"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/recipe_detail_category_field"
                app:layout_constraintTop_toTopOf="@+id/recipe_detail_category_field"
                tools:ignore="HardcodedText" />

<!--            <Button-->
<!--                android:id="@+id/recipe_detail_temp_delete"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginEnd="32dp"-->
<!--                android:text="delete"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_ingredient_list"-->
<!--                tools:ignore="HardcodedText" />-->

            <TextView
...
