...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp">

    <TextView
        android:id="@+id/item_recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif"
        android:text="Title"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_recipe_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/item_recipe_prep_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:drawablePadding="3dp"
        android:gravity="center"
...
        app:drawableTint="@android:color/secondary_text_light"
        app:layout_constraintStart_toEndOf="@+id/item_recipe_image"
        app:layout_constraintTop_toBottomOf="@+id/item_recipe_title"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/item_recipe_num_servings"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="3dp"
        android:gravity="center"
...
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_recipe_photo_text"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/teal_200"
            android:gravity="center"
            android:text="T"
            android:textAlignment="gravity"
...
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/item_recipe_comments"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
...
